--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link
-            rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-            crossorigin="anonymous"
-        />
-        <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-        <script
-        src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
-        crossorigin></script>
 
-        <script
-        src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-        crossorigin></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+    <title>Tiefschlaf</title>
+</head>
 
-        <script>var Alert = ReactBootstrap.Alert;</script>
-        <title>Tiefschlaf</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+<body>
+    <div id="root"></div>
+</body>
+
 </html>
