--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
-    <title>Tiefschlaf</title>
+    <script src=“https://www.paypalobjects.com/webstatic/ppplus/ppplus.min.js“ type=“text/javascript“></script>
+    <title id="document-title">
+        Tiefschlaf
+    </title>
 </head>
 
 <body>
